Replace div tag with main

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Rescript Minesweeper Game</title>
 </head>
 <body>
-  <div id="root"></div>
+  <main role="main" id="root"></main>
   <script type="module" src="/src/Main.bs.js"></script>
 </body>
 </html>
